Add reference page
Now displays reference page and reference index page with count
of the number of times a reference has been used for a usage
example with the lexeme. Reference has also been added to the menu.

--- a/ordia/app/templates/base.html
+++ b/ordia/app/templates/base.html
@@ -57,6 +57,9 @@ placeholder="Search after lemma or form"/>
 		<a class="nav-link" href="{{ url_for('app.show_grammatical_feature_index') }}">Grammatical features</a>
 	    </li>
 	    <li class="nav-item">
+		<a class="nav-link" href="{{ url_for('app.show_reference_index') }}">References</a>
+	    </li>
+	    <li class="nav-item">
 		<a class="nav-link" href="{{ url_for('app.show_l', l='L99') }}">Example lemma L99 (Luftballon)</a>
 	    </li>
 	    <li class="nav-item">
