Change lexeme page Wikidata link format

--- a/ordia/app/templates/l.html
+++ b/ordia/app/templates/l.html
@@ -131,7 +131,11 @@ SELECT ?lexeme ?lexemeLabel WHERE {
 
 <div class="l-entry">
     
-    <h1>Lexeme: {{ l }} - <a href="https://www.wikidata.org/wiki/Lexeme:{{ l }}">Wikidata</a></h1>
+  <h1>Lexeme: {{ l }}</h1>
+
+  [
+  <a href="https://www.wikidata.org/wiki/Lexeme:{{ l }}">Wikidata</a>
+  ]
 
     <hr>
 
