Change sense page Wikidata link format

--- a/ordia/app/templates/ls.html
+++ b/ordia/app/templates/ls.html
@@ -80,11 +80,10 @@ ORDER BY ?languageLabel
 
 <div class="ls-entity">
   <h1>Sense: {{ l }}-{{ s }}</h1>
-
-
   
-
-    <a href="{{ l }}">{{ l }}</a> - <a href="https://www.wikidata.org/wiki/Lexeme:{{ l }}">Wikidata</a>🔗
+  [
+  <a href="https://www.wikidata.org/wiki/Lexeme:{{ l }}">Wikidata</a>
+  ]
 
     <table class="table table-hover" id="sense-data"></table>
 
