Change language page link format

--- a/ordia/app/templates/language.html
+++ b/ordia/app/templates/language.html
@@ -70,6 +70,14 @@ LIMIT 200
 <div class="language-entries">
   <h1>{{ q }}</h1>
 
+  [
+  <a href="https://www.wikidata.org/wiki/{{ q }}">Wikidata</a>
+  |
+  <a href="https://tools.wmflabs.org/reasonator/?&q={{ q }}">Reasonator</a>
+  |
+  <a href="https://tools.wmflabs.org/scholia/topic/{{ q }}">Scholia</a>
+  ]
+
   <h2>Lexemes</h2>
 
   <table class="table table-hover" id="lexemes"></table>
