--- a/ordia/app/templates/q.html
+++ b/ordia/app/templates/q.html
@@ -39,8 +39,16 @@ SELECT ?lexeme ?lexemeLabel ?language ?languageLabel ?sense ?senseLabel WHERE {
 {% block page_content %}
 
 <div class="q-entry">
-    <h1>{{ q }} - <a href="https://www.wikidata.org/wiki/{{ q }}">Wikidata 🔗</a></h1>
+  <h1>{{ q }}</h1>
 
+  [
+  <a href="https://www.wikidata.org/wiki/{{ q }}">Wikidata</a>
+  |
+  <a href="https://tools.wmflabs.org/reasonator/?q={{ q }}">Reasonator</a>
+  |
+  <a href="https://tools.wmflabs.org/scholia/topic/{{ q }}">Scholia</a>
+  ]
+  
     <h2>Lexemes</h2>
 
     <table class="table table-hover" id="lexemes"></table>
