Change example for form

--- a/ordia/app/templates/base.html
+++ b/ordia/app/templates/base.html
@@ -63,7 +63,7 @@ placeholder="Search after lemma or form"/>
 		<a class="nav-link" href="{{ url_for('app.show_l', l='L99') }}">Example lemma L99 (Luftballon)</a>
 	    </li>
 	    <li class="nav-item">
-		<a class="nav-link" href="{{ url_for('app.show_l', l='L128-F4') }}">Example form L128-F4 (vovsernes)</a>
+		<a class="nav-link" href="{{ url_for('app.show_lf', l='L128', f='F3') }}">Example form L128-F3 (vovserne)</a>
 	    </li>
 	</ul>
     </div>
