Fix missing label for conjugation class
Table on lexeme page had missing label for the conjugation class.

--- a/ordia/app/templates/l.html
+++ b/ordia/app/templates/l.html
@@ -54,6 +54,8 @@ WHERE {
     BIND(10 AS ?order)
     BIND("conjugation class" AS ?description)
     ?lexeme wdt:P5186 ?value .
+    ?value rdfs:label ?valueLabel .
+    FILTER (LANG(?valueLabel) = "en")
   }
   UNION 
   {
