--- a/ordia/app/templates/ls.html
+++ b/ordia/app/templates/ls.html
@@ -89,7 +89,8 @@ ORDER BY ?languageLabel
   <h1>Sense: {{ l }}-{{ s }}</h1>
   
   [
-  <a href="https://www.wikidata.org/wiki/Lexeme:{{ l }}">Wikidata</a>
+  <a title="View and edit the lexeme sense on Wikidata"
+     href="https://www.wikidata.org/wiki/Lexeme:{{ l }}#{{ s }}">Wikidata</a>
   ]
 
     <table class="table table-hover" id="sense-data"></table>
