--- a/ordia/app/templates/base.html
+++ b/ordia/app/templates/base.html
@@ -46,9 +46,9 @@
 
     <div class="collapse navbar-collapse" id="navbarToogle">
 	<ul class="navbar-nav">
-	  <li class="nav-item">
-	    <a class="navbar-brand" href="{{ url_for('app.index') }}">Ordia</a>
-	  </li>
+	  <!-- li class="nav-item">
+	    <a class="nav-link" href="{{ url_for('app.index') }}">Home</a>
+	  </li --> 
 	  <li class="nav-item">
 		<a class="nav-link" href="{{ url_for('app.show_language_index') }}">Languages</a>
 	    </li>
