Add text-to-lexemes to menu

--- a/ordia/app/templates/base.html
+++ b/ordia/app/templates/base.html
@@ -65,6 +65,9 @@
 		<a class="nav-link" href="{{ url_for('app.show_reference_index') }}">References</a>
 	    </li>
 	    <li class="nav-item">
+		<a class="nav-link" href="{{ url_for('app.show_text_to_lexemes') }}">Text to lexemes</a>
+	    </li>
+	    <li class="nav-item">
 		<a class="nav-link" href="{{ url_for('app.show_l', l='L99') }}">Example lemma L99 (Luftballon)</a>
 	    </li>
 	    <li class="nav-item">
