Fix in relation to #9: text-to-lexemes

--- a/ordia/app/templates/text_to_lexemes.html
+++ b/ordia/app/templates/text_to_lexemes.html
@@ -6,7 +6,7 @@
 
 <script type="text/javascript">
     extractionSparql = `
-SELECT
+SELECT DISTINCT
   ?word
   ?form ?formLabel
   ?lexeme ?lexemeLabel
