--- a/ordia/app/templates/text_to_lexemes.html
+++ b/ordia/app/templates/text_to_lexemes.html
@@ -59,9 +59,11 @@ ORDER BY ?word
   </div>
   <div class="form-group">
     <label for="language">Language:</label>
-    <select class="form-control" id="language-selector" name="language">
-      <option value="da">Dansk</option>
-      <option value="en">English</option>
+    <select class="form-control" id="language-selector" name="text-language">
+      <option value="da"{% if text_language == 'da' %} selected="selected"{% endif %}>Dansk</option>
+      <option value="en"{% if text_language == 'en' %} selected="selected"{% endif %}>English</option>
+      <option value="pl"{% if text_language == 'pl' %} selected="selected"{% endif %}>Polska</option>
+      <option value="sv"{% if text_language == 'sv' %} selected="selected"{% endif %}>Svenska</option>
     </select>
     </div>
   <div class="form-group">
