--- a/ordia/app/templates/lf.html
+++ b/ordia/app/templates/lf.html
@@ -71,9 +71,12 @@ ORDER BY ?order
 <div class="l-entity">
   <h1>Form: {{ l }}-{{ f }}</h1>
 
-  [
-  <a href="https://www.wikidata.org/wiki/Lexeme:{{ l }}">Wikidata</a>
-  ]
+
+  <a title="View and edit form in Wikidata"
+     role="button"
+     class="btn btn-outline-dark btn-sm"
+     href="https://www.wikidata.org/wiki/Lexeme:{{ l }}#{{ f }}">Wikidata</a>
+
   
   <table class="table table-hover" id="form-data"></table>
 
