--- a/ordia/app/templates/reference.html
+++ b/ordia/app/templates/reference.html
@@ -42,12 +42,15 @@ WHERE {
   
   <h1>Reference: {{ q }}</h1>
   
-  [
-  <a href="https://www.wikidata.org/wiki/{{ q }}">Wikidata</a>
-  |
-  <a href="https://tools.wmflabs.org/scholia/work/{{ q }}">Scholia</a>
-  ]
-  
+  <a title="View and edit reference on Wikidata"
+     role="button"
+     class="btn btn-outline-dark btn-sm"
+     href="https://www.wikidata.org/wiki/{{ q }}">Wikidata</a>
+  <a title="View reference in Scholia"
+     role="button"
+     class="btn btn-outline-dark btn-sm"
+     href="https://tools.wmflabs.org/scholia/work/{{ q }}">Scholia</a>
+
   <hr>
 
   <h2>Use</h2>
