--- a/ordia/app/templates/language.html
+++ b/ordia/app/templates/language.html
@@ -70,13 +70,19 @@ LIMIT 200
 <div class="language-entries">
   <h1>{{ q }}</h1>
 
-  [
-  <a href="https://www.wikidata.org/wiki/{{ q }}">Wikidata</a>
-  |
-  <a href="https://tools.wmflabs.org/reasonator/?&q={{ q }}">Reasonator</a>
-  |
-  <a href="https://tools.wmflabs.org/scholia/topic/{{ q }}">Scholia</a>
-  ]
+  <a title="View and edit item in Wikidata"
+     role="button"
+     class="btn btn-outline-dark btn-sm"
+     href="https://www.wikidata.org/wiki/{{ q }}">Wikidata</a>
+  <a title="View item in Reasonator"
+     role="button"
+     class="btn btn-outline-dark btn-sm"
+     href="https://tools.wmflabs.org/reasonator/?&q={{ q }}">Reasonator</a>
+  <a title="View item as a Scholia topic"
+     role="button"
+     class="btn btn-outline-dark btn-sm"
+     href="https://tools.wmflabs.org/scholia/topic/{{ q }}">Scholia</a>
+
 
   <h2>Lexemes</h2>
 
