Fix wrong link in lexemes table
There was a wrong link in the lexeme table on the properties page

--- a/ordia/app/templates/property.html
+++ b/ordia/app/templates/property.html
@@ -32,6 +32,7 @@ LIMIT 1000
      sparqlToDataTable(lexemesSparql, "#lexemes", {
 	 linkPrefixes: {
 	     lexeme: '../',
+	     language: '../language/', 
 	     value: '../'}});
  });
 
