--- a/ordia/app/templates/index.html
+++ b/ordia/app/templates/index.html
@@ -1,1 +1,73 @@
 {% extends "base.html" %}
+
+{% block scripts %}
+{{super()}}
+
+<script type="text/javascript">
+ statisticsSparql = `
+SELECT
+  ?description 
+  ?value
+WHERE {
+  {
+    { SELECT (COUNT(*) AS ?value) { [] a ontolex:LexicalEntry . } }
+    BIND("Number of lexemes" AS ?description)
+  }
+  UNION
+  {
+    { SELECT (COUNT(*) AS ?value) { [] dct:language [] . } }
+    BIND("Number of language links (dct:language)" AS ?description)
+  }
+  UNION
+  {
+    { SELECT (COUNT(*) AS ?value) { [] a ontolex:Form . } }
+    BIND("Number of forms" AS ?description)
+  }
+  UNION
+  {
+    { SELECT (COUNT(*) AS ?value) { [] a ontolex:LexicalSense . } }
+    BIND("Number of senses (a ontolex:LexicalSense)" AS ?description)
+  }
+  UNION
+  {
+    { SELECT (COUNT(*) AS ?value) { [] ontolex:sense [] . } }
+    BIND("Number of sense links (ontolex:sense)" AS ?description)
+  }
+}
+`
+
+ $(document).ready(function() {
+     sparqlToDataTable(statisticsSparql, "#statistics",
+		       options={
+			   paging: false,
+		       });
+  });
+
+</script>
+
+{% endblock %}
+
+
+{% block page_content %}
+
+
+<div>
+
+  <h1>Ordia</h1>
+
+  <h2>Statistics</h2>
+
+  <table class="table table-hover" id="statistics"></table>
+  
+    
+</div>
+
+{% endblock %}
+
+
+
+
+
+
+
+
